--- a/CocoaPodsTest_10_18/Base.lproj/Main.storyboard
+++ b/CocoaPodsTest_10_18/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                                     <outlet property="calendarDelegate" destination="BYZ-38-t0r" id="6aB-FM-9hL"/>
                                 </connections>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ADy-Ac-rSY">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" restorationIdentifier="MainTableView" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ADy-Ac-rSY">
                                 <rect key="frame" x="8" y="255" width="304" height="225"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -60,10 +60,10 @@
                                 </prototypes>
                             </tableView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HeU-LC-JuG" userLabel="StartUserView">
-                                <rect key="frame" x="40" y="290" width="240" height="155"/>
+                                <rect key="frame" x="40" y="285" width="240" height="160"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nYp-AX-TEO">
-                                        <rect key="frame" x="8" y="107" width="95" height="30"/>
+                                        <rect key="frame" x="8" y="122" width="95" height="30"/>
                                         <animations/>
                                         <color key="backgroundColor" red="1" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" title="Sign Up"/>
@@ -72,7 +72,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gfp-xU-iMz">
-                                        <rect key="frame" x="135" y="107" width="97" height="30"/>
+                                        <rect key="frame" x="135" y="122" width="97" height="30"/>
                                         <animations/>
                                         <color key="backgroundColor" red="1" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" title="Sign In"/>
@@ -80,17 +80,23 @@
                                             <action selector="SignIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ic2-dk-mm1"/>
                                         </connections>
                                     </button>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3gw-Bd-IEA">
-                                        <rect key="frame" x="8" y="25" width="224" height="30"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yBP-CO-Qql">
+                                        <rect key="frame" x="8" y="8" width="224" height="30"/>
                                         <animations/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="t0o-Ve-fag">
-                                        <rect key="frame" x="8" y="63" width="224" height="30"/>
+                                        <rect key="frame" x="8" y="46" width="224" height="30"/>
                                         <animations/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" secureTextEntry="YES"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3gw-Bd-IEA">
+                                        <rect key="frame" x="8" y="84" width="224" height="30"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next"/>
                                     </textField>
                                 </subviews>
                                 <animations/>
@@ -104,6 +110,7 @@
                     <connections>
                         <outlet property="Email" destination="3gw-Bd-IEA" id="TNr-IG-CtA"/>
                         <outlet property="Password" destination="t0o-Ve-fag" id="jnH-J1-c2v"/>
+                        <outlet property="UserName" destination="yBP-CO-Qql" id="pNP-Nj-d1W"/>
                         <outlet property="calendarView" destination="B8c-q0-oQw" id="yfi-hH-RxY"/>
                         <outlet property="menuView" destination="CnE-tf-f5Z" id="1zz-vb-37K"/>
                         <outlet property="monthLabel" destination="QQ2-jf-W2c" id="Wr9-Iq-rvf"/>
