Add login else logic

--- a/CocoaPodsTest_10_18/Base.lproj/Main.storyboard
+++ b/CocoaPodsTest_10_18/Base.lproj/Main.storyboard
@@ -59,7 +59,7 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HeU-LC-JuG" userLabel="StartUserView">
+                            <view tag="1" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HeU-LC-JuG" userLabel="StartUserView">
                                 <rect key="frame" x="40" y="285" width="240" height="160"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nYp-AX-TEO">
