--- a/CocoaPodsTest_10_18/Base.lproj/Main.storyboard
+++ b/CocoaPodsTest_10_18/Base.lproj/Main.storyboard
@@ -93,7 +93,7 @@
                                         <rect key="frame" x="8" y="46" width="224" height="30"/>
                                         <animations/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" secureTextEntry="YES"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next" secureTextEntry="YES"/>
                                         <connections>
                                             <outlet property="delegate" destination="BYZ-38-t0r" id="yLN-oA-E5t"/>
                                         </connections>
@@ -102,7 +102,7 @@
                                         <rect key="frame" x="8" y="84" width="224" height="30"/>
                                         <animations/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="done"/>
                                         <connections>
                                             <outlet property="delegate" destination="BYZ-38-t0r" id="kSW-Qs-D0o"/>
                                         </connections>
